package notificationFactory;

public interface NotificationType {
    void send(String message);
}

